--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@studio-freight/lenis": "^1.0.27",
     "@types/mapbox-gl": "^2.7.15",
     "@types/react-slider": "^1.3.2",
+    "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.16",
+    "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
     "next": "^13.5.4",
     "postcss": "^8.4.31",
